--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -244,7 +244,14 @@
                             <p>Session</p>
                         </a>
                     </li>
-
+                    <li class="nav-item">
+                        <a href="@Url.Action("Advertise", "Admin_Dashboard" )" class="nav-link nav-toggle">
+                            <i class="sea-dash">
+                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                            </i>
+                            <p>Advertise Panel</p>
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a href="@Url.Action("Password", "AspNetSession" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
