--- a/SEA_Application/Views/Student_Dashboard/BlankPage.cshtml
+++ b/SEA_Application/Views/Student_Dashboard/BlankPage.cshtml
@@ -58,7 +58,7 @@
                     <div class="box box-primary">
                         <div class="box-body">
                             <div class="row">
-                                <iframe id="ifm" onload="this.style.height=(this.contentWindow.document.body.scrollHeight+20)+'px';" src="https://pro.ispringcloud.com/acc/0dBmDbE0ODAyMA/view/48020-UEC9i-DTQZ7-jrBtN/embedded?from=embed&amp;fit=1" frameborder="0" border="0" allowtransparency="true" allowfullscreen="1" style="border: none; background-color: transparent; width: 100%; height:600px; overflow:auto"></iframe>
+                                <iframe id="ifm" onload="this.style.height=(this.contentWindow.document.body.scrollHeight+20)+'px';" src="@ViewBag.AdLink" frameborder="0" border="0" allowtransparency="true" allowfullscreen="1" style="border: none; background-color: transparent; width: 100%; height:600px; overflow:auto"></iframe>
                             </div>
                         </div>
                     </div>
