--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -156,15 +156,15 @@
                         </a>
                     </li>
                     @*
-                <li class="nav-item">
-                    <a href="@(Url.Action("MonthlyFeeStudent", "Admin_Dashboard" ))">
+        <li class="nav-item">
+            <a href="@(Url.Action("MonthlyFeeStudent", "Admin_Dashboard" ))">
 
-                        <i class="sea-dash">
-                            <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
-                        </i>
-                        <p>Fee Status</p>
-                    </a>
-                </li>*@
+                <i class="sea-dash">
+                    <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                </i>
+                <p>Fee Status</p>
+            </a>
+        </li>*@
 
                     <li class="nav-item">
                         <a href="@Url.Action("Index", "Expense" )" class="nav-link nav-toggle">
@@ -242,6 +242,14 @@
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
                             </i>
                             <p>Session</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="@Url.Action("Blogs", "Admin_Dashboard" )" class="nav-link nav-toggle">
+                            <i class="sea-dash">
+                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                            </i>
+                            <p>Blogs Panel</p>
                         </a>
                     </li>
                     <li class="nav-item">
