--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -138,7 +138,7 @@
                             <p>Employees</p>
                         </a>
                     </li>
-                    <li class="nav-item hidden">
+                    <li class="nav-item">
                         <a href="@Url.Action("StudentFee", "GrandTotal" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/icon-teacher.png" alt="">
@@ -147,7 +147,7 @@
                         </a>
                     </li>
 
-                    <li class="nav-item hidden">
+                    <li class="nav-item">
                         <a href="@Url.Action("MonthlyFeeStudent", "Admin_Dashboard" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Vouchers.png" alt="">
