--- a/SEA_Application/Views/AspnetLessons/CreateLessonSession.cshtml
+++ b/SEA_Application/Views/AspnetLessons/CreateLessonSession.cshtml
@@ -92,7 +92,8 @@
                         $el.empty();
                         var $e2 = $(".TopIdDDL");
                         $e2.empty();
-
+                        var $e3 = $(".LessIdDDL");
+                        $e3.empty();
                         if (sch.length > 0) {
                             $el.append($("<option></option>")
                                 .attr("value", "").text('Select Subject'));
@@ -116,7 +117,8 @@
                 $el.empty();
                 var $e2 = $(".TopIdDDL");
                 $e2.empty();
-
+                var $e3 = $(".LessIdDDL");
+                $e3.empty();
             }
         });
 
@@ -139,7 +141,8 @@
                     $el.empty();
                     var $e2 = $(".TopIdDDL");
                     $e2.empty();
-
+                    var $e3 = $(".LessIdDDL");
+                    $e3.empty();
                     if (sch.length > 0) {
                         $el.append($("<option></option>")
                             .attr("value", "").text('Select Subject'));
@@ -158,47 +161,47 @@
 
         });
 
-        //$('#TopId').change(function () {
+        $('#TopId').change(function () {
 
-        //    var topid = $(this).val();
-        //    console.log(topid);
+            var topid = $(this).val();
+            console.log(topid);
 
-        //    if (topid != "") {
+            if (topid != "") {
 
-        //        $.ajax({
-        //            type: "POST",
-        //            cache: false,
-        //            url: "/AspNetProject/GetLession?TopID=" + topid,
-        //            processData: false,
-        //            contentType: false,
-        //            success: function (data) {
-        //                var sch = JSON.parse(data);
-        //                console.log(sch);
+                $.ajax({
+                    type: "POST",
+                    cache: false,
+                    url: "/AspNetProject/GetLession?TopID=" + topid,
+                    processData: false,
+                    contentType: false,
+                    success: function (data) {
+                        var sch = JSON.parse(data);
+                        console.log(sch);
 
-        //                var $el = $("#LessonId");
-        //                $el.empty();
-        //                if (sch.length > 0) {
-        //                    $el.append($("<option></option>")
-        //                        .attr("value", "").text('Select Lesson'));
-        //                    for (i = 0; i < sch.length; i++) {
+                        var $el = $("#LessonId");
+                        $el.empty();
+                        if (sch.length > 0) {
+                            $el.append($("<option></option>")
+                                .attr("value", "").text('Select Lesson'));
+                            for (i = 0; i < sch.length; i++) {
 
-        //                        $el.append($("<option></option>")
-        //                            .attr("value", sch[i].Id).text(sch[i].Name));
-        //                    }
-        //                }
-        //                else {
-        //                    $el.append($("<option></option>")
-        //                        .attr("value", '').text('Select'));
-        //                }
-        //            }
-        //        });
-        //    }
-        //    else {
-        //        var $el = $("#LessonId");
-        //        $el.empty();
-        //    }
+                                $el.append($("<option></option>")
+                                    .attr("value", sch[i].Id).text(sch[i].Name));
+                            }
+                        }
+                        else {
+                            $el.append($("<option></option>")
+                                .attr("value", '').text('Select'));
+                        }
+                    }
+                });
+            }
+            else {
+                var $el = $("#LessonId");
+                $el.empty();
+            }
 
-        //});
+        });
 
 
         $('#SubId').change(function () {
@@ -218,7 +221,8 @@
                         console.log(sch);
                         var $el = $("#TopId");
                         $el.empty();
-
+                        var $e1 = $("#LessonId");
+                        $e1.empty();
 
                         if (sch.length > 0) {
                             $el.append($("<option></option>")
@@ -239,24 +243,10 @@
             else {
                 var $el = $("#TopId");
                 $el.empty();
-
+                var $e1 = $("#LessonId");
+                $e1.empty();
             }
         });
-
-
-
-
-        $("#TopId").change(function () {
-
-            CheckLessonAlreadyScheduled();
-        })
-
-        $("#SessionId").change(function () {
-
-            CheckLessonAlreadyScheduled();
-        })
-
-
 
         $("form").submit(function () {
 
@@ -305,63 +295,7 @@
         //            }
 
         //})
-    });//End of Document Ready
-
-    function CheckLessonAlreadyScheduled() {
-
-        var TopicId = $("#TopId").val();
-        var SessionId = $("#SessionId").val();
-
-        if (TopicId != "" && SessionId != "") {
-
-            $("#submit").attr('disabled', false);
-              $("#submit").html("Save");
-            $.ajax({
-
-                type: "POST",
-
-                url: "/AspnetLessons/CheckLessonAlreadyScheduled?TopicId=" + TopicId + "&&SessionId=" + SessionId,
-                success: function (data) {
-
-                    var ErrorMsg = "";
-                    if (data.LessonExist == "No") {
-
-                        $("#submit").attr('disabled', true);
-
-                        var ErrorMsg = "There is no Lesson in Selected Topic"
-                    }
-                    else {
-
-                        if (data.Button == "Disabled") {
-
-                            $("#submit").attr('disabled', true);
-
-                        }
-                        else {
-
-                            
-                            $("#submit").attr('disabled', false);
-
-                            if (data.ErrorMsg == "New lesson found in selected topic and section") {
-                                $("#submit").html("Update");
-                            }
-
-                        }
-
-                        var ErrorMsg = data.ErrorMsg;
-                    }
-
-                    $("#ErrorMsg").html(ErrorMsg);
-
-
-                }
-
-            })
-
-        }
-
-    }
-
+    });
 </script>
 
 
@@ -408,26 +342,19 @@
                                 <select class="form-control TopIdDDL" id="TopId" name="TopId" required></select>
                             </div>
 
-                            @*<div class="form-group">
-                                    <label for="" class="control-label">Lesson* </label>
+                            <div class="form-group">
+                                <label for="" class="control-label">Lesson* </label>
 
-                                    <select class="form-control LessIdDDL" id="LessonId" name="LessonId" required></select>
-                                </div>*@
+                                <select class="form-control LessIdDDL" id="LessonId" name="LessonId" required></select>
+                            </div>
 
 
                             <div class="form-row mt-3">
                                 <div class="form-group col-md-12 bmd-form-group">
                                     <label for="" class="bmd-label-static pl-2">Select Section*</label>
                                     <select class="form-control SecIdDDL" id="SessionId" name="SessionId" required></select>
-
                                 </div>
                             </div>
-
-                            <div>
-                                <Span id="ErrorMsg" style="color:red"></Span>
-                            </div>
-
-
                             <span style="padding:10px"></span>
 
                             <div class="form-group">
